Added error handling for User auth

--- a/frontend/src/views/html/registration.html
+++ b/frontend/src/views/html/registration.html
@@ -58,6 +58,7 @@
                         <span>Picked: {{ picked }}</span>
 
                     </v-card-text>
+                    <div v-show="error" class ="error" style="color: black">{{this.errorMsg}}</div>
 
 
 
