--- a/frontend/src/views/html/account.html
+++ b/frontend/src/views/html/account.html
@@ -10,55 +10,62 @@
             <v-card ref="form">
                 <v-card-text>
                     <v-text-field
-                            ref="firstname"
-                            v-model="this.$store.state.profileFirstName"
+                            v-model="newFirstName"
                             :rules="[() => !!firstname || 'This field is required']"
                             label="First Name"
                             required
                             outlined
-                            value="Hello"
-
-
                     ></v-text-field>
 
                     <v-text-field
-                            ref="lastname"
-                            v-model="this.$store.state.profileLastName"
+                            v-model="newLastName"
                             :rules="[() => !!lastname || 'This field is required']"
                             label="Last Name"
                             outlined
                             required
                     ></v-text-field>
                     <v-text-field
-                            ref="email"
-                            label="Email"
-                            v-model="this.$store.state.profileEmail"
+                            label="Email Address"
+                            v-model="newEmail"
                             :rules="[() => !!email || 'This field is required']"
                             outlined
                             required
                     ></v-text-field>
-
                 </v-card-text>
 
 
 
                 <v-divider class="mt-12"></v-divider>
                 <v-card-actions>
-                    <v-btn text ref = "cancel" @click="cancelButtonClicked">
-                        Cancel
-                    </v-btn>
                     <v-spacer></v-spacer>
 
                     <v-btn
                             color="success"
-                            text
-                            @click="signUpRequest"
+                            @click="submitAccountChanges"
                     >
-                        Submit
+                        Save Changes
                     </v-btn>
                 </v-card-actions>
             </v-card>
         </v-col>
     </v-row>
+
+    <v-snackbar
+        v-model="snackbar"
+        :timeout="2000"
+      >
+        Your account information has been updated!
+  
+        <template v-slot:action="{ attrs }">
+          <v-btn
+            color="success"
+            text
+            v-bind="attrs"
+            @click="snackbar = false"
+          >
+            Close
+          </v-btn>
+        </template>
+    </v-snackbar>
 
 </div>
