--- a/frontend/src/views/html/account.html
+++ b/frontend/src/views/html/account.html
@@ -40,6 +40,7 @@
                     <v-spacer></v-spacer>
 
                     <v-btn
+                            :disabled='isDisabled()'
                             color="success"
                             @click="submitAccountChanges"
                     >
