--- a/frontend/src/views/html/account.html
+++ b/frontend/src/views/html/account.html
@@ -7,6 +7,7 @@
                 md="8"
                 lg="6"
         >
+            <h1 class="text-center mt-4">Change Account Information</h1>
             <v-card ref="form">
                 <v-card-text>
                     <v-text-field
