added temp dummy responses doctor chat

--- a/frontend/src/views/html/docchat.html
+++ b/frontend/src/views/html/docchat.html
@@ -5,7 +5,7 @@
             <v-textarea
                     v-model="chatBox"
                     outlined
-                    disabled
+                    readonly
                     no-resize
             >
                 <v-row rows ="1">
