--- a/frontend/src/views/html/patientchat.html
+++ b/frontend/src/views/html/patientchat.html
@@ -1,6 +1,6 @@
 <div class="patientChat">
     <v-card elevation="0" class="mx-auto mt-5" max-width="60%">
-        <h1 class="text-center mt-4">Doctor Chat</h1>
+        <h1 class="text-center mt-4">Patient Chat</h1>
         <v-form>
             <v-textarea
                     v-model="chatBox"
