--- a/frontend/src/views/html/account.html
+++ b/frontend/src/views/html/account.html
@@ -54,7 +54,7 @@
                     <v-text-field
                             label="Insurance"
                             v-model="newInsurance"
-                            :rules="[() => !!insurancename]"
+                            :rules="[() => !!insurance]"
                             outlined
                             placeholder="Blue Cross Blue Shield"
                     ></v-text-field>
