--- a/frontend/src/views/html/account.html
+++ b/frontend/src/views/html/account.html
@@ -1,155 +1,91 @@
 <div class="account">
 
-    <v-row justify="center">
-        <v-col
-                cols="12"
-                sm="10"
-                md="8"
-                lg="6"
-        >
-            <h1 class="text-center mt-4">Change Account Information</h1>
-            <v-card ref="form">
-                <v-card-text>
-                    <v-text-field
-                            v-model="newFirstName"
-                            :rules="[() => !!firstname || 'This field is required']"
-                            label="First Name"
-                            required
-                            outlined
-                    ></v-text-field>
-
-                    <v-text-field
-                            v-model="newLastName"
-                            :rules="[() => !!lastname || 'This field is required']"
-                            label="Last Name"
-                            outlined
-                            required
-                    ></v-text-field>
-                    <v-text-field
-                            label="Email Address"
-                            v-model="newEmail"
-                            :rules="[() => !!email || 'This field is required']"
-                            outlined
-                            required
-                    ></v-text-field>
-
-                    <h3>Medical Information</h3>
-                    <v-text-field
-                            label="Birthday"
-                            v-model="newBirthday"
-                            :rules="[() => !!birthday || 'This field is required']"
-                            outlined
-                            required
-                            placeholder="mm/dd/yyyy"
-                    ></v-text-field>
-                    <v-text-field
-                            label="Social Security Number"
-                            v-model="newSSN"
-                            :rules="[() => !!ssn]"
-                            outlined
-                            placeholder="###-##-####"
-                    ></v-text-field>
-
-                    <h3>Insurance Information (If Applicable)</h3>
-                    <v-text-field
-                            label="Insurance"
-                            v-model="newInsurance"
-                            :rules="[() => !!insurance]"
-                            outlined
-                            placeholder="Blue Cross Blue Shield"
-                    ></v-text-field>
-                    <v-text-field
-                            label="Insurance Group"
-                            v-model="newInsuranceGroup"
-                            :rules="[() => !!insurancegroup]"
-                            outlined
-                    ></v-text-field>
-                    <v-text-field
-                            label="Insurance Member ID"
-                            v-model="newMemberID"
-                            :rules="[() => !!memberid]"
-                            outlined
-                    ></v-text-field>
-                    <v-text-field
-                            label="RxBIN"
-                            v-model="newRxBIN"
-                            :rules="[() => !!rxbin]"
-                            outlined
-                            placeholder="######"
-                    ></v-text-field>
-                    <v-text-field
-                            label="RxPCN"
-                            v-model="newRxPCN"
-                            :rules="[() => !!rxpcn]"
-                            outlined
-                            placeholder="XX"
-                    ></v-text-field>
-                    <v-text-field
-                            label="RxGRP"
-                            v-model="newRxGRP"
-                            :rules="[() => !!rxgrp]"
-                            outlined
-                            placeholder="XXXX"
-                    ></v-text-field>
-
-                    <h3>Payment Information (No Automatic Charges)</h3>
-                    <v-text-field
-                            label="Cardholder Name"
-                            v-model="newCardholderName"
-                            :rules="[() => !!cardholdername]"
-                            outlined
-                    ></v-text-field>
-                    <v-text-field
-                            label="Card Number"
-                            v-model="newCardNumber"
-                            :rules="[() => !!cardnumber]"
-                            outlined
-                    ></v-text-field>
-                    <v-text-field
-                            label="CVV"
-                            v-model="newCVV"
-                            :rules="[() => !!cvv]"
-                            outlined
-                    ></v-text-field>
-                    <v-text-field
-                            label="ExpirationDate"
-                            v-model="newExpirationDate"
-                            :rules="[() => !!expirationdate]"
-                            outlined
-                    ></v-text-field>
-                </v-card-text>
-
-                <v-divider class="mt-12"></v-divider>
-                <v-card-actions>
-                    <v-spacer></v-spacer>
-
-                    <v-btn
-                            :disabled='isDisabled()'
-                            color="success"
-                            @click="submitAccountChanges"
-                    >
-                        Save Changes
-                    </v-btn>
-                </v-card-actions>
-            </v-card>
-        </v-col>
-    </v-row>
-
-    <v-snackbar
-        v-model="snackbar"
-        :timeout="2000"
-      >
-        Your account information has been updated!
-  
-        <template v-slot:action="{ attrs }">
-          <v-btn
-            color="success"
-            text
-            v-bind="attrs"
-            @click="snackbar = false"
+        <v-row justify="center">
+            <v-col
+                    cols="12"
+                    sm="10"
+                    md="8"
+                    lg="6"
+            >
+                <h1 class="text-center mt-4">Change Account Information</h1>
+                <v-card ref="form">
+                    <v-card-text>
+                        <v-text-field
+                                v-model="newFirstName"
+                                :rules="[() => !!firstname || 'This field is required']"
+                                label="First Name"
+                                required
+                                outlined
+                        ></v-text-field>
+    
+                        <v-text-field
+                                v-model="newLastName"
+                                :rules="[() => !!lastname || 'This field is required']"
+                                label="Last Name"
+                                outlined
+                                required
+                        ></v-text-field>
+                        <v-text-field
+                                label="Email Address"
+                                v-model="newEmail"
+                                :rules="[() => !!email || 'This field is required']"
+                                outlined
+                                required
+                        ></v-text-field>
+    
+                        <h3>Medical Information</h3>
+                        <v-text-field
+                            class="mt-5"
+                                label="Birthday"
+                                v-model="newBirthday"
+                                :rules="[() => !!birthday || 'This field is required']"
+                                outlined
+                                required
+                                placeholder="mm/dd/yyyy"
+                        ></v-text-field>
+    
+                        <h3>Insurance Information (If Applicable)</h3>
+                        <v-text-field
+                            class="mt-5"
+                                label="Insurance"
+                                v-model="newInsurance"
+                                :rules="[() => !!insurance]"
+                                outlined
+                                placeholder="Blue Cross Blue Shield"
+                        ></v-text-field>
+                    </v-card-text>
+    
+                    <v-divider class="mt-12"></v-divider>
+                    <v-card-actions>
+                        <v-spacer></v-spacer>
+                        <v-btn
+                                :disabled='isDisabled()'
+                                color="success"
+                                @click="submitAccountChanges"
+                        >
+                            Save Changes
+                        </v-btn>
+                    </v-card-actions>
+                </v-card>
+            </v-col>
+        </v-row>
+    
+        <v-snackbar
+            v-model="snackbar"
+            :timeout="2000"
           >
-            Close
-          </v-btn>
-        </template>
-    </v-snackbar>
-</div>
+            Your account information has been updated!
+      
+            <template v-slot:action="{ attrs }">
+              <v-btn
+                color="success"
+                text
+                v-bind="attrs"
+                @click="snackbar = false"
+              >
+                Close
+              </v-btn>
+            </template>
+        </v-snackbar>
+    
+    </div>
